# medicalink-ai-service

./: .dockerignore  .env.docker.example  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  compose.ghcr.yaml  compose.integrated.yaml  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: cd-docker.yml  ci.yml
medicalink_ai/: __init__.py  config.py  doctor_knowledge.py  eval_log.py  gemini_llm.py  intent_specialty.py  qdrant_schema.py  rag.py  rerank.py  sparse_encoder.py  vector_store.py  worker.py
medicalink_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
medicalink_ai/scripts/: batch_sync.py
scripts/: deploy-ai-to-vm.sh  deploy-from-ghcr.sh
